
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int ina ;


 int AF_INET ;
 int HOSTNAME ;
 int MYSQL_PORT ;
 int SOCK_STREAM ;
 int bcopy (int ,void*,int ) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (int ) ;
 int htons (int ) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;

int connect_mysql()
{
    int s2;
    struct sockaddr_in ina;
    struct hostent *h;

    h = gethostbyname(HOSTNAME);

    bcopy(h->h_addr,(void *)&ina.sin_addr,h->h_length);
    ina.sin_family = AF_INET;
    ina.sin_port = htons(MYSQL_PORT);

    if((s2=socket(AF_INET,SOCK_STREAM,0)) < 0)
   perror("Socket: ");

    if(connect(s2,(struct sockaddr *)&ina,sizeof(ina)) < 0 )
                    perror("connect()");
    return s2;
}
